@@ -3,14 +3,6 @@ plugins {
 }
 
 
-compileJava {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
-
-//    options.compilerArgs += ["--add-modules", "java.xml.bind"]
-}
-
-
 compileTestJava {
 //    options.compilerArgs += ["--add-modules", "java.xml.bind"]
 }
